# jax-Music-Source-Separation

./: .dockerignore  .gitignore  Dockerfile  README.md  convert.py  download.sh  extract_deverb.sh  infer.py  install.sh  msst.Dockerfile  pyproject.toml  requirements.gke.txt  requirements.train.txt  requirements.txt  setup.py  setup.sh  train.py  webui.py  worker.py
configs/: bs_roformer_base.yaml  bs_roformer_logic.yaml  bs_roformer_logic_infer8.yaml  infer.yaml  mel_band_roformer_base.yaml
models/: bs_roformer.py  mel_band_roformer.py
src/jaxmsst/: __init__.py  convert.py  infer.py  infer_batch.py  train.py  webui.py
src/jaxmsst/configs/: loader.py
src/jaxmsst/models/: bs_roformer.py  flash_attention.py  mel_band_roformer.py
